src/objects/CH_Workgroup_Rule_Search__c.object
<CustomObject>
    <fields>
        <fullName>CH_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Customer_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Grouping</label>
        <referenceTo>CH_CustomerGrouping__c</referenceTo>
        <relationshipLabel>Workgroup Rule Searches</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workgroup Rule Searches</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Level_Of_Support__c</fullName>
        <label>Level Of Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Level_Of_Support</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Outage__c</fullName>
        <label>Outage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ProductRelease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Release</label>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>Workgroup Rule Searches</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ProductVariant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Variant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Complementary Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Additional_Classification__c</field>
                <operation>equals</operation>
                <value>Product Variant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rule Searches (Product Variant)</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Grouping</label>
        <referenceTo>CH_ProductGrouping__c</referenceTo>
        <relationshipLabel>Workgroup Rule Searches</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Product Modules</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rule Searches (Product Module)</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR (3 AND 7) OR 4 OR 5 OR 6 OR 8)</booleanFilter>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Complementary Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Parallel Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Service Product</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Service Module</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Additional_Classification__c</field>
                <operation>notEqual</operation>
                <value>Product Variant</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Solution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rule Searches</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Workgroup Rule Searches</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Internal Support</fullName>
                </value>
                <value>
                    <fullName>Hardware Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Service_Contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Contract</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.CH_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Portfolio_Classification__c</field>
                <operation>equals</operation>
                <value>Solution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Workgroup Rule Searches (Solution)</relationshipLabel>
        <relationshipName>Workgroup_Rule_Searches3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Type__c</fullName>
        <label>Workgroup Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Workgroup_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Workgroup Rule Search</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Workgroup Rule Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Rule Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>